fix: :bug: fix overflow from Stack
fixed the horizontal overflow caused from the Stack part of the page. Also made the banner slightly more responsive.

--- a/src/app/stack/stack.component.css
+++ b/src/app/stack/stack.component.css
@@ -28,6 +28,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .stack img {
