--- a/src/app/top-card/top-card.component.css
+++ b/src/app/top-card/top-card.component.css
@@ -30,7 +30,6 @@
 
 .top-links {
   display: flex;
-  width: 30vw;
   justify-content: space-between;
   margin-right: 1rem;
 }
